# extra_robot_interfaces

./: CMakeLists.txt  LICENSE  README.md  package.xml
msg/: DistanceSensorVoltages.msg  DistanceSensorVoltagesStamped.msg  Efficiency.msg  MotorCurrents.msg  MotorCurrentsStamped.msg  MotorPositions.msg  MotorPositionsStamped.msg  MotorState.msg  MotorVelocities.msg  MotorVelocitiesStamped.msg  Range.msg  SlippageStamped.msg
srv/: PredictSlippage.srv  PredictSurface.srv  PredictVelocity.srv
